[project]
name = "class-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pip>=25.2",
    "pydantic>=2.12.3",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
